CXS-2129, CXS-2103, CXS-2078: fix for windows horizontal scrollbar

--- a/index.css
+++ b/index.css
@@ -844,7 +844,7 @@ html.u-app body * {
   visibility: hidden;
 }
 .z-horizontal-scroller {
-  height: 0.1px;
+  height: 1px;
   visibility: hidden;
 }
 .z-vertical-scrollbar {
